Changed database to MS Sql from sql lite

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=WeatherForeCast.db"
+    "DefaultConnection": "Data Source=DESKTOP-IHJHGGH;Initial Catalog=WeatherForeCast;Integrated Security=True"
   },
   "TokenKey": "super secret unguessable key",
   "Logging": {
