Changed to prod urls

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-IHJHGGH;Initial Catalog=WeatherForeCast;Integrated Security=True"
+    "DefaultConnection": "Data Source=tcp:weatherdbsvr.database.windows.net,1433;Initial Catalog=weatherdb;Persist Security Info=False;User ID=wije;Password=Abc_123+;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "TokenKey": "super secret unguessable key",
   "Logging": {
